feat: reorganize page and add short text about re-use

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -27,19 +27,6 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ## Data Life Cycle Support
 
-### Data Re-Use {#reuse}
-
-<ChemotionIcon
-	url="/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.svg"
-	alt="chemotion icon for reuse in data lifecycle"
-/>
-
-What about planning in terms of importing data from repositories --> reuse
-
-[Find out more](/docs/chemotion_eln_dataReuse) | [Back to top](#top)
-
-<br />
-
 ### Experiment Design {#experiment_design}
 
 <ChemotionIcon
@@ -51,7 +38,6 @@ What about planning in terms of importing data from repositories --> reuse
 Chemotion assists in experiment design and planning research by offering embedded _structure editors_, reading and generating _chemical identifiers_, and pulling information from relevant _databases_.
 
 [Find out more](/docs/chemotion_eln_experimentDesign) | [Back to top](#top)
-
 
 <br />
 
@@ -105,6 +91,19 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 The Chemotion ELN is connected to several _data repositories_. Incorperated publishing workflows allow for simple and fast publication of research data.
 
 [Find out more](/docs/chemotion_eln_dataPublication) | [Back to top](#top)
+
+<br />
+
+### Data Re-Use {#reuse}
+
+<ChemotionIcon
+	url="/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.svg"
+	alt="chemotion icon for reuse in data lifecycle"
+/>
+
+Chemotion ELN enables easy _sharing_ of data and entries with collaborators. Additionally, both your own data as well as those of group members can be reused for new experiments.
+
+[Back to top](#top)
 
 <br />
 
