refactor: restructure Chemotion ELN documentation

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Chemotion ELN"
-slug: "/chemotion_eln"
-id: "chemotion_eln"
+slug: "/chemotion"
 ---
 
 import VideoPrivacy from "video-privacy";
