--- a/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Experiment"
-slug: "/chemotion_eln_experiment"
-id: "chemotion_eln_experiment"
+slug: "/chemotion_experiment"
 ---
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
