--- a/docs/40_smartlab/41_chemotion_eln/60_chemotion_analysis.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/60_chemotion_analysis.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Analysis"
-slug: "/chemotion_eln_analysis"
-id: "chemotion_eln_analysis"
+slug: "/chemotion_analysis"
 ---
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
