--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -36,7 +36,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 Chemotion assists in experiment design and planning research by offering embedded _structure editors_, reading and generating _chemical identifiers_, and pulling information from relevant _databases_.
 
-[Find out more](/docs/chemotion_eln_experimentDesign) | [Back to top](#top)
+[Find out more](/docs/chemotion_experimentDesign) | [Back to top](#top)
 
 <br />
 
@@ -50,7 +50,7 @@ Chemotion assists in experiment design and planning research by offering embedde
 
 During experiments, Chemotion supports researchers with _automated calculations_, _structured documentation_, and a _concise overview_ of experimental information.
 
-[Find out more](/docs/chemotion_eln_experiment) | [Back to top](#top)
+[Find out more](/docs/chemotion_experiment) | [Back to top](#top)
 
 <br />
 
@@ -63,7 +63,7 @@ During experiments, Chemotion supports researchers with _automated calculations_
 
 For seamless workflows, _analytical devices_ can be connected and directly accessed within the Chemotion ELN. Besides this connection, data from these devices can be automatically transferred, file formats are converted, and metadata is mapped.
 
-[Find out more](/docs/chemotion_eln_dataCollection) | [Back to top](#top)
+[Find out more](/docs/chemotion_dataCollection) | [Back to top](#top)
 
 <br />
 
@@ -76,7 +76,7 @@ For seamless workflows, _analytical devices_ can be connected and directly acces
 
 Analyses can be performed directly in the Chemotion ELN by utilizing one of the embedded _spectra editors_.
 
-[Find out more](/docs/chemotion_eln_analysis) | [Back to top](#top)
+[Find out more](/docs/chemotion_analysis) | [Back to top](#top)
 
 <br />
 
@@ -89,7 +89,7 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 
 The Chemotion ELN is connected to several _data repositories_. Incorperated publishing workflows allow for simple and fast publication of research data.
 
-[Find out more](/docs/chemotion_eln_dataPublication) | [Back to top](#top)
+[Find out more](/docs/chemotion_dataPublication) | [Back to top](#top)
 
 <br />
 
@@ -135,7 +135,7 @@ A short introduction to the Chemotion ELN as well as the connection to the Chemo
 
 ## Documentation, Information, and Contact
 
-Chemotion ELN and its functionalities are described in various publications (see [below](#sources)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
+Chemotion ELN and its functionalities are described in various publications (see [below](#sources)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion).
 
 Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. The development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
@@ -151,7 +151,7 @@ There are various ways for newcomers to begin using Chemotion and get to know th
 - Check out the [Chemotion Tutorial Videos](https://chemotion.net/docs/eln/videos): familiarize yourself with the user interface and the features
 - Attend an online [Live Demo & Q&A Session](https://www.nfdi4chem.de/event/chemotion-demo-qa-session/)
 - Attend a [Chemotion ELN Hands-on Workshop](https://www.nfdi4chem.de/event/chemotion-eln-hands-on-workshop/)
-- Sign up for the [chemotion mailing list for users and admins](https://www.lists.kit.edu/sympa/subscribe/chemotion_eln) to stay up to date
+- Sign up for the [chemotion mailing list for users and admins](https://www.lists.kit.edu/sympa/subscribe/chemotion) to stay up to date
 
 #### Establishing Chemotion ELN in your Group
 
@@ -169,4 +169,4 @@ There are various ways for newcomers to begin using Chemotion and get to know th
 - [Chemotion-ELN part 2: adaption of an embedded Ketcher editor to advanced research applications](https://doi.org/10.1186/s13321-018-0292-9)
 - [CHEMSCANNER: extraction and re-use(ability) of chemical information from common scientific documents containing ChemDraw files](https://doi.org/10.1186/s13321-019-0400-5)
 - [Chemotion ELN documentation](https://chemotion.net/docs/eln)
-- [Chemotion ELN on Github](https://github.com/ComPlat/chemotion_ELN)
+- [Chemotion ELN on Github](https://github.com/ComPlat/chemotion)
