--- a/docs/50_data_publication/00_data_publishing.mdx
+++ b/docs/50_data_publication/00_data_publishing.mdx
@@ -46,7 +46,7 @@ There are two main ways to publish research data:
 Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publishing in generic repositories requires manual FAIRification.
 :::
 
-[Smart Lab](/docs/smartlab) solutions, such as [Chemotion ELN](/docs/chemotion_eln/), can offer built-in workflows to assist researchers in publishing data. If the data is already documented in a structured way in Chemtotion ELN, then the data can also be published in this structured way via [Chemotion Repository](https://www.chemotion-repository.net/).
+[Smart Lab](/docs/smartlab) solutions, such as [Chemotion ELN](/docs/chemotion/), can offer built-in workflows to assist researchers in publishing data. If the data is already documented in a structured way in Chemtotion ELN, then the data can also be published in this structured way via [Chemotion Repository](https://www.chemotion-repository.net/).
 
 Further information on repositories, including a list of recommended chemistry-friendly repositories, is provided on our pages on [repositories](/docs/repositories) and guide on [how to choose the right repository](/docs/choose_repository).
 
