--- a/docs/50_data_publication/25_best_practice.mdx
+++ b/docs/50_data_publication/25_best_practice.mdx
@@ -13,7 +13,7 @@ On this page, we provide best practices for the publication of data in field-spe
 
 ## Best practices for field-specific repositories
 
-For the field-specific repositories [Chemotion Repository](/docs/chemotion_repository) in combination with [Chemotion ELN](/docs/chemotion_eln), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one [digital environment](/docs/smartlab). FAIRification of data along this [data life cycle](/docs/data_life_cycle) is mainly handled by Chemotion. During the seamless export from the ELN into the repository, [PIDs](/docs/pid) (in this case [DOIs](https://www.doi.org/)) are assigned to the deposited data. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples, analysis data, and collections (Collection DOI).
+For the field-specific repositories [Chemotion Repository](/docs/chemotion_repository) in combination with [Chemotion ELN](/docs/chemotion), the data is collected along the scientific workflows, analytical data files are automatically converted to open formats, controlled vocabularies or ontologies are used to describe data, and analysis data is interconnected to reactions and samples, hence, chemical structures. The entire Chemotion package allows researchers to collect, analyse, process, store, and publish various types of analytical data attached to reactions and samples in one [digital environment](/docs/smartlab). FAIRification of data along this [data life cycle](/docs/data_life_cycle) is mainly handled by Chemotion. During the seamless export from the ELN into the repository, [PIDs](/docs/pid) (in this case [DOIs](https://www.doi.org/)) are assigned to the deposited data. Chemotion Repository [provides](https://www.chemotion.net/docs/repo/doi) DOIs for reactions, samples, analysis data, and collections (Collection DOI).
 
 Other field-specific repositories such as [CSD and ICSD](/docs/csd_icsd), [Strenda DB](/docs/strenda_db), [SupraBank](/docs/suprabank), [NOMAD](/docs/nomad), and [Chemotion Repository](/docs/chemotion_repository), if used independently from Chemotion ELN, offer built-in workflows for the aggregation of structured data along the submission pathways, aligned with the [FAIR Data Principles](/docs/fair). This greatly facilitates the publication of FAIR data.
 
@@ -54,7 +54,7 @@ For further aspects to consider, we provide a non-exhaustive list of generic bes
 -   **The provenance information of data should be included.**<br/>Part of that [provenance information](/docs/provenance) is part of the dataset's metadata and should be added via the metadata editor of the repository. All information which previously would have typically been included in the supplemental PDF section on general information and protocols, e.g. information on methods and instruments used, are provenance information and should be added to a README file, as long as no domain-specific metadata schema is available. This README could be a text file, or written in Markdown, while also a human-readable rendered representation as HTML could be provided.
 
 :::danger Notice:
-Does that sound like a lot of manual work? Avoid extra work by using a [smart lab](/docs/smartlab) digital environments for collecting, processing, analysing, and publishing research data, such as [Chemotion ELN](/docs/chemotion_eln) in combination with [Chemotion Repository](/docs/chemotion_repository)! Plus, you may omit the preparation of supplementary PDFs and use the saved work time to prepare your dataset for publication!
+Does that sound like a lot of manual work? Avoid extra work by using a [smart lab](/docs/smartlab) digital environments for collecting, processing, analysing, and publishing research data, such as [Chemotion ELN](/docs/chemotion) in combination with [Chemotion Repository](/docs/chemotion_repository)! Plus, you may omit the preparation of supplementary PDFs and use the saved work time to prepare your dataset for publication!
 :::
 
 ### Best practice examples for generic repositories
