--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -17,12 +17,12 @@ import ChemotionLifecycle from "@site/src/components/chemotion/ChemotionLifecycl
 
 :::info
 To find out about choosing an ELN, head to the [Choose the right ELN
-article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.scc.kit.edu/).
+article](/docs/choose_eln) and test demo instances [here](https://demo.chemotion.scc.kit.edu/).
 :::
 
-The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the [reseach data life cycle](docs/data_life_cycle). Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
+The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the [reseach data life cycle](/docs/data_life_cycle). Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
 
-To get an overview on how and with which tools Chemotion ELN supports you throughout the whole [reseach data life cycle](docs/data_life_cycle), have a look at the sections below and find out more detailed information about the single steps by clicking the link in the respective section.
+To get an overview on how and with which tools Chemotion ELN supports you throughout the whole [reseach data life cycle](/docs/data_life_cycle), have a look at the sections below and find out more detailed information about the single steps by clicking the link in the respective section.
 
 ## Data Life Cycle Support
 
