--- a/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
@@ -11,4 +11,4 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 As relevant information on chemical compounds such as molar mass, density, and purity are stored within the ELN, Chemotion automatically calculates all relevant amounts saving a researcher's time and preventing miscalculations and typos. Furthermore, predefined text snippets and the transfer of reaction information to the description of experiments allow for a fast and facile documentation.
 
-Due to structured and standardized input fields, the documentation takes place in an uniform and [metadata](docs/metadata)-enriched way. Thus, entries in the Chemotion ELN always give a full but still concise overview on all experimental information facilitating to conduct and document experiments in the laboratory.
+Due to structured and standardized input fields, the documentation takes place in an uniform and [metadata](/docs/metadata)-enriched way. Thus, entries in the Chemotion ELN always give a full but still concise overview on all experimental information facilitating to conduct and document experiments in the laboratory.
