--- a/docs/40_smartlab/41_chemotion_eln/50_chemotion_dataCollection.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/50_chemotion_dataCollection.mdx
@@ -12,7 +12,7 @@ Analytical data are typically generated and stored in a fully digital format. Ho
 
 When analytical devices are connected to the Chemotion ELN, data is easily transferred to the ELN. The transfer maps generated data to experiment entries by employing the experiment naming conventions. Thus, analytical data are seamlessly connected to experiments.
 
-In many cases, analytical devices might store data in proprietary file formats. To enable the [FAIR data principles](docs/fair), Chemotion is able to convert such files to the text-based, open source file format *JCAMP-DX*. This conversion occurs automatically once data has been transferred from the analytical device. The Chemotion tool [*ChemConverter*](https://chemotion.net/docs/services/chemconverter) carries out this process and stores both the proprietary file format and the converted file format within the ELN.
+In many cases, analytical devices might store data in proprietary file formats. To enable the [FAIR data principles](/docs/fair), Chemotion is able to convert such files to the text-based, open source file format *JCAMP-DX*. This conversion occurs automatically once data has been transferred from the analytical device. The Chemotion tool [*ChemConverter*](https://chemotion.net/docs/services/chemconverter) carries out this process and stores both the proprietary file format and the converted file format within the ELN.
 
 Generally, Chemotion supports researchers with their data collection by semi-automated metadata mapping. Here, Chemotion identifies and extracts metadata from analytical data files and writes them into the corresponding, standardized input fields.
 
