--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_experimentDesign.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_experimentDesign.mdx
@@ -4,16 +4,35 @@ slug: "/chemotion_experimentDesign"
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
+import ChemotionCarousel from "@site/src/components/chemotion/ChemotionCarousel";
+import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
 
 # Chemotion ELN: Experiment Design
 
-![icon and screenshots for experiment design in Chemotion ELN](/img/smartlab/chemotion/chemotion_DoE_banner.png)
+<ChemotionCarousel
+	icon={{
+		src: useBaseUrl(
+			"/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.svg",
+		),
+		alt: "chemotion icon for experiment design in data lifecycle",
+	}}
+	images={[
+		{
+			src: useBaseUrl("/img/smartlab/chemotion/experimentDesign1.png"),
+			alt: "Experiment Design Structure Editor",
+		},
+		{
+			src: useBaseUrl("/img/smartlab/chemotion/experimentDesign2.png"),
+			alt: "Experiment Design References",
+		},
+	]}
+/>
 
-In the Chemotion ELN, various entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors, while *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
+In the Chemotion ELN, various entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: _ketcher-rails_ and _Ketcher 2_ are integrated as default structure editors, while _ChemDraw JS_ and _Marvin JS_ can be integrated when the needed licences are available.
 
-All structure editors directly convert the chemical structures into common chemical identifiers such as [*InChI*](https://www.inchi-trust.org/) and notations such as [*SMILES*](https://doi.org/10.1021%2Fci00057a005) code and automatically generate a MOL file of the chemical structure. Conversely, chemical structures can be generated in the ELN by importing the codes and files mentioned above as well as by [*CAS numbers*](https://www.cas.org/cas-data/cas-registry).
+All structure editors directly convert the chemical structures into common chemical identifiers such as [_InChI_](https://www.inchi-trust.org/) and notations such as [_SMILES_](https://doi.org/10.1021%2Fci00057a005) code and automatically generate a MOL file of the chemical structure. Conversely, chemical structures can be generated in the ELN by importing the codes and files mentioned above as well as by [_CAS numbers_](https://www.cas.org/cas-data/cas-registry).
 
-The Chemotion ELN directly pulls information from and links entries to databases such as [*PubChem*](https://pubchem.ncbi.nlm.nih.gov/) and [*CAS SciFinder*](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder). Thus, the planning of experiments is facilitated as all relevant information is automatically integrated into the ELN entries.
+The Chemotion ELN directly pulls information from and links entries to databases such as [_PubChem_](https://pubchem.ncbi.nlm.nih.gov/) and [_CAS SciFinder_](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder). Thus, the planning of experiments is facilitated as all relevant information is automatically integrated into the ELN entries.
 
 Furthermore, the Chemotion ELN offers the possibility to link (text) publications directly to the ELN entries as references using [persistant identifiers](/docs/pid) such as DOIs. With this, the ELN allows you to directly connect corresponding literature to experiments so you can cite and reference your own published work, experiments performed by others, or related publications.
 
