fix: correct sidebar position in Chemotion ELN documentation

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Chemotion ELN"
 slug: "/chemotion"
+sidebar_position: "99"
 ---
 
 import VideoPrivacy from "video-privacy";
@@ -9,7 +10,6 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
 
 import ChemotionLifecycle from "@site/src/components/chemotion/ChemotionLifecycle";
-
 
 # Chemotion ELN
 
