--- a/docs/40_smartlab/41_chemotion_eln/50_chemotion_dataCollection.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/50_chemotion_dataCollection.mdx
@@ -2,18 +2,35 @@
 title: "Data Collection and Processing"
 slug: "/chemotion_dataCollection"
 ---
-import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Chemotion: Data Collection and Processing
 
-![icon and screenshots for data collection in Chemotion ELN](/img/smartlab/chemotion/chemotion_dataCollection_banner.png)
+import useBaseUrl from "@docusaurus/useBaseUrl";
+import ChemotionCarousel from "@site/src/components/chemotion/ChemotionCarousel";
+
+<ChemotionCarousel
+	icon={{
+		src: useBaseUrl(
+			"/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.svg",
+		),
+		alt: "chemotion icon for experiment in data lifecycle",
+	}}
+	images={[
+		{
+			src: useBaseUrl("/img/smartlab/chemotion/dataCollection1.png"),
+			alt: "Data Collection Structure Editor",
+		},
+		{
+			src: useBaseUrl("/img/smartlab/chemotion/dataCollection2.png"),
+			alt: "Data Collection References",
+		},
+	]}
+/>
 
 Analytical data are typically generated and stored in a fully digital format. However, there is often a disconnect between these data, the associated analytical devices, and the laboratory notebook documenting the experiments. Chemotion ELN addresses this issue by enabling the integration of analytical devices with the ELN through [device integration](https://doi.org/10.1016/j.acax.2019.100007). This feature not only facilitates linking devices to the ELN and experiments but also allows for remote control of the devices. As a result, users can manage device operations, initiate measurements, and monitor progress directly within the ELN from any location.
 
 When analytical devices are connected to the Chemotion ELN, data is easily transferred to the ELN. The transfer maps generated data to experiment entries by employing the experiment naming conventions. Thus, analytical data are seamlessly connected to experiments.
 
-In many cases, analytical devices might store data in proprietary file formats. To enable the [FAIR data principles](/docs/fair), Chemotion is able to convert such files to the text-based, open source file format *JCAMP-DX*. This conversion occurs automatically once data has been transferred from the analytical device. The Chemotion tool [*ChemConverter*](https://chemotion.net/docs/services/chemconverter) carries out this process and stores both the proprietary file format and the converted file format within the ELN.
+In many cases, analytical devices might store data in proprietary file formats. To enable the [FAIR data principles](/docs/fair), Chemotion is able to convert such files to the text-based, open source file format _JCAMP-DX_. This conversion occurs automatically once data has been transferred from the analytical device. The Chemotion tool [_ChemConverter_](https://chemotion.net/docs/services/chemconverter) carries out this process and stores both the proprietary file format and the converted file format within the ELN.
 
 Generally, Chemotion supports researchers with their data collection by semi-automated metadata mapping. Here, Chemotion identifies and extracts metadata from analytical data files and writes them into the corresponding, standardized input fields.
-
-
