refactor: replace ChemotionIcon with FloatImage for improved flexibility

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -7,7 +7,7 @@ sidebar_position: "99"
 import VideoPrivacy from "video-privacy";
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
+import FloatImage from "@site/src/components/commons/FloatImage";
 
 import ChemotionLifecycle from "@site/src/components/chemotion/ChemotionLifecycle";
 
@@ -28,9 +28,11 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ---
 
-<ChemotionIcon
+<FloatImage
 	url="/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.svg"
 	alt="chemotion icon for experiment design in data lifecycle"
+	width="min(100px, 20%)"
+	margin="30px 0px 0px 20px"
 />
 
 ### Experiment Design {#experiment_design}
@@ -41,9 +43,11 @@ Chemotion assists in experiment design and planning research by offering embedde
 
 ---
 
-<ChemotionIcon
+<FloatImage
 	url="/img/smartlab/chemotion/chemotion_icons/chemotion_experiment.svg"
 	alt="chemotion icon for experiment in data lifecycle"
+	width="min(100px, 20%)"
+	margin="30px 0px 0px 20px"
 />
 
 ### Experiment {#experiment}
@@ -54,9 +58,11 @@ During experiments, Chemotion supports researchers with _automated calculations_
 
 ---
 
-<ChemotionIcon
+<FloatImage
 	url="/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.svg"
 	alt="chemotion icon for data collection and processing in data lifecycle"
+	width="min(100px, 20%)"
+	margin="30px 0px 0px 20px"
 />
 
 ### Data Collection and Processing {#collection_processing}
@@ -67,9 +73,11 @@ For seamless workflows, _analytical devices_ can be connected and directly acces
 
 ---
 
-<ChemotionIcon
+<FloatImage
 	url="/img/smartlab/chemotion/chemotion_icons/chemotion_analysis.svg"
 	alt="chemotion icon for analysis in data lifecycle"
+	width="min(100px, 20%)"
+	margin="30px 0px 0px 20px"
 />
 
 ### Analysis {#analysis}
@@ -80,9 +88,11 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 
 ---
 
-<ChemotionIcon
+<FloatImage
 	url="/img/smartlab/chemotion/chemotion_icons/chemotion_dataPublication.svg"
 	alt="chemotion icon for data publication in data lifecycle"
+	width="min(100px, 20%)"
+	margin="30px 0px 0px 20px"
 />
 
 ### Data Publication {#publication}
@@ -93,9 +103,11 @@ The Chemotion ELN is connected to several _data repositories_. Incorperated publ
 
 ---
 
-<ChemotionIcon
+<FloatImage
 	url="/img/smartlab/chemotion/chemotion_icons/chemotion_reuse.svg"
 	alt="chemotion icon for reuse in data lifecycle"
+	width="min(100px, 20%)"
+	margin="30px 0px 0px 20px"
 />
 
 ### Data Re-Use {#reuse}
