--- a/docs/40_smartlab/41_chemotion_eln/60_chemotion_analysis.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/60_chemotion_analysis.mdx
@@ -7,7 +7,7 @@ slug: "/chemotion_analysis"
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 import ChemotionCarousel from "@site/src/components/chemotion/ChemotionCarousel";
-import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
+import FloatImage from "@site/src/components/commons/FloatImage";
 
 <ChemotionCarousel
 	icon={{
@@ -32,7 +32,7 @@ import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
 	]}
 />
 
-<ChemotionIcon
+<FloatImage
 	url={useBaseUrl("/img/nmrium-logo.svg")}
 	alt="NMRium icon"
 	float="left"
