--- a/docs/40_smartlab/41_chemotion_eln/70_chemotion_dataPublication.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/70_chemotion_dataPublication.mdx
@@ -7,7 +7,7 @@ slug: "/chemotion_dataPublication"
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 import ChemotionCarousel from "@site/src/components/chemotion/ChemotionCarousel";
-import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
+import FloatImage from "@site/src/components/commons/FloatImage";
 
 <ChemotionCarousel
 	icon={{
@@ -30,7 +30,7 @@ import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
 
 />
 
-<ChemotionIcon
+<FloatImage
 	url={useBaseUrl("/img/ChemotionRepo_Logo.svg")}
 	alt="Chemotion Repository badge"
 	float="left"
@@ -41,7 +41,7 @@ import ChemotionIcon from "@site/src/components/chemotion/ChemotionIcon";
 {/* prettier-ignore-start */}
 
 Chemotion ELN provides a dedicated functionality that facilitates the [publication of research data](/docs/data_publishing) by enabling seamless transfer from a user's ELN account to a [research data repository](/docs/repositories). Currently, the ELN supports data transfers to the [_Chemotion Repository_](https://www.chemotion-repository.net/welcome) and [_RADAR4Chem_](https://radar4chem.radar-service.eu/radar/en/home).
-<ChemotionIcon
+<FloatImage
 	url={useBaseUrl("/img/radar4chem_Logo.svg")}
 	alt="RADAR4Chem Repository badge"
 	float="right"
@@ -55,7 +55,7 @@ work available to their research community.
 
 {/* prettier-ignore-end */}
 
-<ChemotionIcon
+<FloatImage
 	url={useBaseUrl("/img/nmrXiv.svg")}
 	alt="nmrXiv Repository badge"
 	float="left"
