fix: correct alt texts

--- a/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/30_chemotion_experiment.mdx
@@ -18,11 +18,11 @@ import ChemotionCarousel from "@site/src/components/chemotion/ChemotionCarousel"
 	images={[
 		{
 			src: useBaseUrl("/img/smartlab/chemotion/experiment1.png"),
-			alt: "Experiment Structure Editor",
+			alt: "Experiment Reaction Browser",
 		},
 		{
 			src: useBaseUrl("/img/smartlab/chemotion/experiment2.png"),
-			alt: "Experiment References",
+			alt: "Experiment Description and Properties",
 		},
 	]}
 />
