--- a/docs/40_smartlab/41_chemotion_eln/50_chemotion_dataCollection.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/50_chemotion_dataCollection.mdx
@@ -18,11 +18,11 @@ import ChemotionCarousel from "@site/src/components/chemotion/ChemotionCarousel"
 	images={[
 		{
 			src: useBaseUrl("/img/smartlab/chemotion/dataCollection1.png"),
-			alt: "Data Collection Structure Editor",
+			alt: "Data Collection Flash Chromatography Remote Control",
 		},
 		{
 			src: useBaseUrl("/img/smartlab/chemotion/dataCollection2.png"),
-			alt: "Data Collection References",
+			alt: "Data Collection Import Analytical Data from Inbox",
 		},
 	]}
 />
