--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -4,14 +4,16 @@ slug: "/chemotion"
 sidebar_position: "99"
 ---
 
+# Chemotion ELN
+
+<span id="top" />
+
 import VideoPrivacy from "video-privacy";
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 import FloatImage from "@site/src/components/commons/FloatImage";
 
 import ChemotionLifecycle from "@site/src/components/chemotion/ChemotionLifecycle";
-
-# Chemotion ELN
 
 <ChemotionLifecycle />
 
