refactor: reorganize component structure

--- a/docs/50_data_publication/51_lbe/10_datasets.mdx
+++ b/docs/50_data_publication/51_lbe/10_datasets.mdx
@@ -4,8 +4,7 @@ hide_table_of_contents: true
 slug: "/datasets"
 ---
 
-import Lbe from '@site/src/components/LeadByExample.js';
-
+import Lbe from "@site/src/components/lbe/Lbe.js";
 
 # Lead by Example Datasets
 
@@ -13,6 +12,6 @@ import Lbe from '@site/src/components/LeadByExample.js';
 
 :::note
 
-*This list will be continuously updated with further publication dataset pairs.*
+_This list will be continuously updated with further publication dataset pairs._
 
 :::
