--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -70,8 +70,8 @@ This type of PID will commonly lead to a landing page, the content of which is m
 <img align="left" src={useBaseUrl("/img/topics/arka-logo.png")} width="200" alt="ePIC Header logo" vspace="12" hspace="20" />
 
 The Archival Research Key ([ARK](https://arks.org/about/ark-overview/)) are open identifiers hich are assigned to physical and digital information objects, mostly in the cultural studies.
-ARK prefixes are centrally assigned on request by the ARK Alliance and can be resolved centrally on ...
-The single ARKs are assigned and managed by the single institutions on an own server. Other that DOIs, they are free of charge.
+ARK prefixes are centrally assigned on request by the ARK Alliance and can be resolved centrally on services like [N2T](https://n2t.net/). More information is provided on the [ARK overview page](https://arks.org/about/ark-overview/#resolvers).  
+The single ARKs are assigned and managed by the single institutions on an own server. Other that DOIs, they are free of charge.  
 An ARK usually has the form: `ark:12148/btv1b8449691v/f29` and can be combined with different ARK URI prefixes leading to different resolving servers.
 Attaching a `?` at the end of an ARK allows adding a structured description of the resource.
 Much [software](https://arks.org/resources/) is available to mint, store, resolve, interpret ARKs.
