--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -110,7 +110,7 @@ This type of PID will commonly lead to a landing page, the content of which is m
 
 <img
   align="left"
-  src={useBaseUrl("/img/topics/arka-logo.png")}
+  src={useBaseUrl("/img/topics/arka_logo.svg")}
   width="200"
   alt="ePIC Header logo"
   vspace="12"
