fix: alt description

--- a/docs/60_topics/61_identifiers/10_pid.mdx
+++ b/docs/60_topics/61_identifiers/10_pid.mdx
@@ -112,7 +112,7 @@ This type of PID will commonly lead to a landing page, the content of which is m
   align="left"
   src={useBaseUrl("/img/topics/arka_logo.svg")}
   width="200"
-  alt="ePIC Header logo"
+  alt="ARK logo"
   vspace="12"
   hspace="20"
 />
