chore: clarify link to ELN demo page

--- a/docs/40_smartlab/15_choose_eln.mdx
+++ b/docs/40_smartlab/15_choose_eln.mdx
@@ -14,25 +14,25 @@ Therefore, choosing the right ELN is crucial for a successful implementation of 
 
 :::caution Needs assessment
 
--   Analysing current situation (budget, IT resources, software environment)
--   Definition of important features
--   ELN concept (generic, discipline-specific)
--   Drawing on experiences of other research Institutions
-    :::
+- Analysing current situation (budget, IT resources, software environment)
+- Definition of important features
+- ELN concept (generic, discipline-specific)
+- Drawing on experiences of other research Institutions
+  :::
 
 :::info Testing the selected products
 
--   Demo versions or free trial access for individual users
--   Testing no more than 2-3 ELNs
--   In-depth testing using real-life use cases from the lab
-    :::
+- Demo versions or free trial access for individual users
+- Testing no more than 2-3 ELNs
+- In-depth testing using real-life use cases from the lab
+  :::
 
 :::tip Introducing the chosen ELN
 
--   Run training courses, training material
--   Designate contact persons from the test team
--   Continuous mentoring
-    :::
+- Run training courses, training material
+- Designate contact persons from the test team
+- Continuous mentoring
+  :::
 
 ### Criteria for selecting an ELN
 
@@ -62,21 +62,21 @@ There are a plethora of ELNs available and it is not always easy to figure out w
 
 ### Testing an ELN
 
-Fortunately, you do not always have to install a separate instance to test ELN. At [link](https://demo.chemotion.scc.kit.edu/), the Chemotion team hosts a constantly growing number of test installations of various ELNs that you can try out free of charge.
+Fortunately, you do not always have to install a separate instance to test ELN. The Chemotion team hosts a constantly growing number of [test installations](https://demo.chemotion.scc.kit.edu/) of various ELNs that you can try out free of charge.
 
 ### Set up your own ELN
 
 There are several ways to set up an electronic lab notebook (ELN) for your team:
 
--   Run an ELN instance on a local server. For example, Chemotion, NFDI4Chem's favourite ELN, can be installed on a server in your data centre or institute. This allows your team to work completely independently: you can customise the ELN, add device connections as needed, and manage users yourself. You can use a Docker container to easily set up your local instance. Alternatively, you can build it from scratch for full flexibility. Click here for a detailed technical description.
--   Use an ELN instance hosted in the cloud. "ELN as a service is a convenient way to test the functionality first. This option is also interesting for smaller teams who are concerned about the effort involved in setting up an ELN on a local server. NFDI4Chem is in the process of setting up Chemotion and some other open source solutions as an ELN as a service. To find out more about when this will be available, please get in touch.
+- Run an ELN instance on a local server. For example, Chemotion, NFDI4Chem's favourite ELN, can be installed on a server in your data centre or institute. This allows your team to work completely independently: you can customise the ELN, add device connections as needed, and manage users yourself. You can use a Docker container to easily set up your local instance. Alternatively, you can build it from scratch for full flexibility. Click here for a detailed technical description.
+- Use an ELN instance hosted in the cloud. "ELN as a service is a convenient way to test the functionality first. This option is also interesting for smaller teams who are concerned about the effort involved in setting up an ELN on a local server. NFDI4Chem is in the process of setting up Chemotion and some other open source solutions as an ELN as a service. To find out more about when this will be available, please get in touch.
 
 ### Contact Us
 
 You can contact us at any step of the process:
 
--   whether you want to know more about ELNs, need a demonstration of an ELN, a test installation of an ELN or are simply thinking about one.
--   if you want to install an ELN, need help with IT issues etc.
--   want additional features in a running instance etc.
+- whether you want to know more about ELNs, need a demonstration of an ELN, a test installation of an ELN or are simply thinking about one.
+- if you want to install an ELN, need help with IT issues etc.
+- want additional features in a running instance etc.
 
 Just send an email to [Link](mailto:helpdesk@nfdi4chem.de) with your questions or requests.
