chore: add link to official Chemotion demo instance

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -160,6 +160,7 @@ NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the La
 There are various ways for newcomers to begin using Chemotion and get to know the software:
 
 - Check out the [Chemotion Docs](https://chemotion.net/docs): instructions on both the Chemotion ELN and the Chemotion Repo
+- Check out the official [Chemotion Demo Instance](https://demo.chemotion.ibcs.kit.edu/).
 - Check out the [Chemotion Tutorial Videos](https://chemotion.net/docs/eln/videos): familiarize yourself with the user interface and the features
 - Attend an online [Live Demo & Q&A Session](https://www.nfdi4chem.de/event/chemotion-demo-qa-session/)
 - Attend a [Chemotion ELN Hands-on Workshop](https://www.nfdi4chem.de/event/chemotion-eln-hands-on-workshop/)
