fix: add tip section for getting started with Chemotion ELN

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -20,6 +20,10 @@ To find out about choosing an ELN, head to the [Choose the right ELN
 article](/docs/choose_eln) and test demo instances [here](https://demo.chemotion.scc.kit.edu/).
 :::
 
+:::tip
+Want to dive right in? Check out the [Getting Started](#getting_started) section!
+:::
+
 The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the [reseach data life cycle](/docs/data_life_cycle). Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
 
 To get an overview on how and with which tools Chemotion ELN supports you throughout the whole [reseach data life cycle](/docs/data_life_cycle), have a look at the sections below and find out more detailed information about the single steps by clicking the link in the respective section.
@@ -153,7 +157,7 @@ Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/
 
 NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the LabIMotion extension. Visit the [workshop overview page](https://www.nfdi4chem.de/workshops/) for more information.
 
-### Getting Started
+### Getting Started {#getting_started}
 
 #### Newcomers
 
