fix: remove redundant "Back to top" links from Chemotion ELN documentation

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -43,7 +43,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 Chemotion assists in experiment design and planning research by offering embedded _structure editors_, reading and generating _chemical identifiers_, and pulling information from relevant _databases_.
 
-[Find out more](/docs/chemotion_experimentDesign) | [Back to top](#top)
+[Find out more](/docs/chemotion_experimentDesign)
 
 ---
 
@@ -58,7 +58,7 @@ Chemotion assists in experiment design and planning research by offering embedde
 
 During experiments, Chemotion supports researchers with _automated calculations_, _structured documentation_, and a _concise overview_ of experimental information.
 
-[Find out more](/docs/chemotion_experiment) | [Back to top](#top)
+[Find out more](/docs/chemotion_experiment)
 
 ---
 
@@ -73,7 +73,7 @@ During experiments, Chemotion supports researchers with _automated calculations_
 
 For seamless workflows, _analytical devices_ can be connected and directly accessed within the Chemotion ELN. Besides this connection, data from these devices can be automatically transferred, file formats are converted, and metadata is mapped.
 
-[Find out more](/docs/chemotion_dataCollection) | [Back to top](#top)
+[Find out more](/docs/chemotion_dataCollection)
 
 ---
 
@@ -88,7 +88,7 @@ For seamless workflows, _analytical devices_ can be connected and directly acces
 
 Analyses can be performed directly in the Chemotion ELN by utilizing one of the embedded _spectra editors_.
 
-[Find out more](/docs/chemotion_analysis) | [Back to top](#top)
+[Find out more](/docs/chemotion_analysis)
 
 ---
 
@@ -103,7 +103,7 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 
 The Chemotion ELN is connected to several _data repositories_. Incorperated publishing workflows allow for simple and fast publication of research data.
 
-[Find out more](/docs/chemotion_dataPublication) | [Back to top](#top)
+[Find out more](/docs/chemotion_dataPublication)
 
 ---
 
@@ -117,8 +117,6 @@ The Chemotion ELN is connected to several _data repositories_. Incorperated publ
 ### Data Re-Use {#reuse}
 
 Chemotion ELN enables easy _sharing_ of data and entries with collaborators. Additionally, both your own data as well as those of group members can be reused for new experiments.
-
-[Back to top](#top)
 
 ---
 
