feat: add links to FloatImage components for enhanced navigation in Chemotion ELN

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion.mdx
@@ -34,6 +34,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 <FloatImage
   url="/img/smartlab/chemotion/chemotion_icons/chemotion_DoE.svg"
+  link="/docs/chemotion_experimentDesign"
   alt="chemotion icon for experiment design in data lifecycle"
   width="min(100px, 20%)"
   margin="30px 0px 0px 20px"
@@ -49,6 +50,7 @@ Chemotion assists in experiment design and planning research by offering embedde
 
 <FloatImage
   url="/img/smartlab/chemotion/chemotion_icons/chemotion_experiment.svg"
+  link="/docs/chemotion_experiment"
   alt="chemotion icon for experiment in data lifecycle"
   width="min(100px, 20%)"
   margin="30px 0px 0px 20px"
@@ -64,6 +66,7 @@ During experiments, Chemotion supports researchers with _automated calculations_
 
 <FloatImage
   url="/img/smartlab/chemotion/chemotion_icons/chemotion_dataCollection_Processing.svg"
+  link="/docs/chemotion_dataCollection"
   alt="chemotion icon for data collection and processing in data lifecycle"
   width="min(100px, 20%)"
   margin="30px 0px 0px 20px"
@@ -79,6 +82,7 @@ For seamless workflows, _analytical devices_ can be connected and directly acces
 
 <FloatImage
   url="/img/smartlab/chemotion/chemotion_icons/chemotion_analysis.svg"
+  link="/docs/chemotion_analysis"
   alt="chemotion icon for analysis in data lifecycle"
   width="min(100px, 20%)"
   margin="30px 0px 0px 20px"
@@ -94,6 +98,7 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 
 <FloatImage
   url="/img/smartlab/chemotion/chemotion_icons/chemotion_dataPublication.svg"
+  link="/docs/chemotion_dataPublication"
   alt="chemotion icon for data publication in data lifecycle"
   width="min(100px, 20%)"
   margin="30px 0px 0px 20px"
